--- a/CompRepro_2020.Rmd
+++ b/CompRepro_2020.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Computational Reproducibility"
-author: "Fred LaPolla"
-date: "10/14/2020"
+author: "Brian Chirn"
+date: "10/21/2020"
 output: html_document
 ---
 
@@ -24,9 +24,13 @@ To add a chunk either click on the green Insert button and choose R or hit Comma
 1) Create an R Project to pull this file from GitHub. 
 
 2) Please describe one of the ways that Wilson et. al. suggest is a good practice for computational reproducibility and how a tool like R can be used. Write your answer below.
+One of the suggestions Wilson et. al recommends is to keep track of changes. This allows researchers to look back on specific instances of code or projects in order to reproduce data generated at that time. They suggest various version control systems to keep track of changes. A program like R can be used to keep track of changes because it can be connected to hithub, a version control system. 
 
 
 3) Add a code chunk and find the square root of 4 to the 13th power. If you are unsure of what command to use, google it. 
+```{r}
+sqrt(4**13)
+```
 
 
 4) Push this homework to the GitHub repository for the homework. 
